test/code/test_class_self_error.out

Fatal error: Cannot access self:: when no class scope is active in {{CWD}}/test/code/test_class_self_error.php on line 3
