test/code/test_class_self_error.php
<?php

self::$hello_world = 1;

